# R-Shell

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _gitignore  cmake_install.cmake  names.txt  rshell  test
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  input_redirection_tests.sh  multiple_commands_tests.sh  output_redirection_tests.sh  pipe_operator_tests.sh  precedence_tests.sh  single_command_tests.sh  test_command_tests.sh
integration_tests/TESTS/: test.txt  test2.txt
prototypes/: prototype.cpp
src/: base.h  commands.cpp  commands.h  connectors.cpp  connectors.h  prototype.cpp  prototype.h  rshell.cpp  rshell.h
unit_tests/: test.cpp
